name:                ucspi-hs
version:             0.1.0.0
synopsis:            A small Haskell interface to writing @ucspi@-conformant applications
-- description:
license:             BSD3
license-file:        LICENSE
author:              Getty Ritter
maintainer:          gettylefou@gmail.com
copyright:           © 2015 Getty Ritter
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.UCSPI
  build-depends:       base >=4.7 && <4.8, unix >=2.7 && <2.8
  default-language:    Haskell2010
